governance-shared/baselines/3.23.1/ChronoPM-Portfolio/references/02-aggregation-query-rules.md
# 聚合查询规则（V-2～V-8、V-11、V-12、V-13、V-14）

聚合范围 = `portfolio/context/project-index.md` 已登记、挂载校验通过、且本期「是否纳入周报/查询」未排除的**一级成员项目**。未登记目录不参与。下级集工作区路径字段仅登记，不递归聚合。

**最小读取集**：只读索引与登记册表格行、PLAN WP 表、待办核心执行表行。不读全文、不读拆解 seg 正文，除非集经理点名某项目某文件。

**as-of（v3.23.0）**：每个已登记成员若存在 `ai/.state.json`，汇总输出附 `as_of` + `facts_fingerprint` 前 8 位。无则标「无派生视图」，仍读 `_index`/登记册。禁止把本次聚合表写入 `portfolio/cache/` 或当下一问数据源。每问仍实读最小读取集（CQ-5）。

进入本规则前必须已完成 V-1（03 号）扫描比对。防套娃未通过的项目整项剔除并告警。

## 1. 待办清单输出（同 Project R18）

适用范围：一切跨项目待办清单（我的待办 / 查某人 / 全员矩阵中的待办列）。

首行固定：

```
您今日待办跨 {N} 个子项目，共 {总数} 条（未办结 {X}、已办结 {Y}，待确认终态 {Z}；as-of 见各成员 `.state`）：
```

- 默认只列 **未办结** 行：待处理 / 进行中 / 已阻塞。评审是另一条待办，待办状态枚举无「待评审」。
- 已完成 / 已取消 / 已转出 = 已办结，默认不列行，只进首行计数。
- **未确认终态默认可见**：成员项目 `Confirmed By: 待确认` 的终态禁止当已办结隐藏；列在未办结，或单列「待确认完成」分组；`{Z}` 只计待确认。`Confirmed By: auto`（含 DF-013 日报自动完成）按已确认，不进 {Z}。不读成员 inbox/claim。过程日志只读各项目 `logs/ops/_index.md` 行，不把过程日志当进度事实。
- 展开已办结仅当集经理使用触发词：全部 / 含已完成 / 所有任务 / 展示所有 / 完整展示 / 所有待办（及同义显式表达）。AI 不得自行展开。
- **每一行必须：项目名 + 该项目 TD 编号** `TD-{缩写}-{YYYYMMDD}-{NNN}`，不得用 1、2、3 代替。

读法：按人按日读 `projects/{名}/ai/todos/{date}/{owner}.md` 核心表行 + 当日 `_index.md`；状态以待办文件为准。

## 1a. 查成员项目对话日志（推导，不加列）

project-index **不加日志指针列**。查询时：

```
锚点 = 集工作区根
成员日志索引 = {锚点}/{该行管理路径}/logs/ops/_index.md
存在 → 只读打开；不存在 → 「尚未发生」
```

禁止把成员日志正文抄进 portfolio。V-1 只负责收编成员，不写日志指针。新目录 ASK 收编后才参与探测。集层自己的对话记在 `portfolio/logs/`。集层请某项目改待办：只写集层日志一行（出处=集层→项目名），实际写入走该项目 ChronoPM-Project / 内部 V-9，禁止代写 `projects/*/ai`。

## 2. V-2 进度总览

数据源（每项目）：`plans/PLAN-*.md` 的 WP 表（状态/计划/实际）+ 待办按 WP Ref 聚合进度。成员 `wps/_index.md` 若分三段，集层进度默认只把 **进行中段** 当在办（已完成/废弃归档点名才纳入）。待办 WP Ref 按**单值**计；空值或缺列只读降级；逗号/多值当脏数据，**不双计**进度。

输出：项目 × WP 进度表。列：项目、WP、状态、计划日期、预计/实际、偏差、未办结待办数。含关键阶段的 WP（§8 关键阶段=是）单独或加标记。

偏差：实际或预计晚于计划的工作日数。缺计划日期则标「无基线」。WP 进度 = 该 WP 下待办状态聚合（派生，不建进度文件）。

## 3. V-3 人×项目视图

数据源（待办体系，**不再读 resource-register**）：各项目 `todos/{date}/` 个人文件 §0 / §0.5 + 同日 `_index.md`（§1 花名册为在组权威；§6 TD 缩写映射）。冲突时 `_index` §1 为权威，§0 仅佐证身份细节（联系方式/负责模块）。

输出：人 × 项目 × 未办结待办矩阵。每人一行「他还在哪几个项目有未完成待办」；详情指向该项目 `ai/`，不在集层复制待办。

**T1 排期冲突**（只提示不落盘）：同一人同一日期在 ≥2 个项目有未办结待办，或各项目分配比例合计 >100%。输出提示，不改任何项目文件。

**所属项目列漂移**：A 项目 `_index` §1 备注记王某同时在 B，B 的花名册无此人 → 提示漂移，列入内部 V-9，不静默改。对外白话说明两边不一致，不对用户说「建议更新清单」。

本视图禁止落盘。

## 4. V-4 跨项目风险 / 问题

完整实体在主归属项目 `risks/risk-register.md` 或 `issues/issue-register.md`。判定跨项目：影响项目 ≥2，或标注「跨项目」，或描述明确点名其他已登记项目。

输出：Risk/Issue ID、描述摘要、主归属项目、影响项目、等级、状态、应对摘要。编号兼容旧序号与时间戳号（`R-011` 与 `R-20260820-143025`）。

集层不建 risk-register。若集经理要求「记一条跨项目风险」→ 内部 V-9，指向主归属项目登记册。对外白话，不对用户说「建议更新清单」。

## 5. V-6 门禁最小值

存在跨项目统一门禁（封板 / 割接 / 上线窗口等）时：

**整体状态 = 所有相关项目该节点 WP 状态的最小值。任一未完成 = 整体未完成。**

输出：门禁名、整体状态、各项目该 WP 状态与原因。未达标标注具体项目。实时计算，不落盘。

无对应 WP 的项目标「未映射」，不把缺失当成已完成。

## 6. V-7 整体 P&L

数据源：各项目 `project-info/budget.md`。

| 项目 | 合同额 | 成本线 | 已投入 | 人力成本 | CPI | 偏差 |
|------|--------|--------|--------|----------|-----|------|

合计人力成本占总合同额超预警线（默认 50%，项目 context 有约定则从其约定）必须主动预警。缺 budget 的项目标「待登记」，合计注明缺失项，禁止用 0 填补冒充完整。

实时计算，不落盘。写入集周报时该表是当期快照，须带 generated_from。

## 7. V-8 合同去重归并

数据源：各项目 `requirements/contract-register.md` 表格行 + 优先 `requirements/sources/{簇 ID}/ledger.md`（v3.7.0 为 9 列，缺列按 —；指纹优先 MD5，旧内容哈希或大小+mtime 仍识别）。未零清则可兼容读 `{type}-source/ledger.md`。

去重键 = **簇固定号 + fingerprint**（CON- / BID- / INIT- / COMP- / SUP- / TRN- 等，集内全局一致）。同键 = 同一份文档，归并视图只呈现一次，并标注存在于哪些项目。SRC-NNN 不是互认键。

**方案 β（簇 ID + 内容指纹）：**

| 判定 | 条件 | 行为 |
|------|------|------|
| 同源 | 簇 ID 相同且 fingerprint 相同 | 去重合并，计一份 |
| 标准一致 | 段数/标题结构一致 | 可聚合 |
| 内容一致 | 内容哈希一致 | 可聚合 |
| 冲突 | 同簇 ID 但 fingerprint 或内容不一致 | **提示版本差异**（各项目路径+指纹+parsed_by），不臆断以谁为准，不静默覆盖 |

单簇物理形态（v3.7.0）：优先 `requirements/sources/{簇 ID}/`（六件套含 parse-log）。兼容期只读旧 `{type}-source/`，直到该成员完成零清。禁止本包另造第三套目录。不读全文，除非点名比对冲突段。禁止二次拆解。接收侧对账由成员项目 WF-SD-1 执行，本包 V-8 只遍历去重。

## 7a. 实体进度聚合（v3.7.0，F12）

从各成员项目 `wps/WP-*.md` WP §3（功能点） 实体行实时聚合，不落地。无 WP §3（功能点） 则跳过该项并标注。跨项目推导规则（F13）仅本文件本段，不写成员项目。

集层不另存 contract-register 事实源。范围判定遍历各项目登记册 + 本条去重，不路由到集层存储。

## 8. 查询自动路由

跨项目查询按 project-index 成员范围自动遍历相关项目 `ai/`，不需用户逐个指定。用户点名项目则缩小范围。点名未登记名称 → 先走 V-1 提示登记，不得把未登记目录当成员读入结论。

**集层查词（V-12）**：先读 `portfolio/context/glossary-index.md` 指针行（术语 / 标准词 / 出现项目 / G 号 / 确认状态），返回各项目标准词与确认状态；查不到或指针失效，再按指针去该项目 `context/domain-glossary.md` **表格行取证**。只抽表格行（原词 / 标准词 / 状态 / G 号），**不读释义正文**。同一原词跨项目标准词不一致 → 提示漂移，走内部 V-9，不代改。索引滞后：命中指针后校验目标条目仍存在；不存在则标 stale 并提示刷新（懒刷新，不定时扫描）。

## 9. V-11 跨项目共享文件拆分

触发：「拆了这份文件」/「分到各项目」及同义。本能力是分析 + 建议，**不改变只读契约**。

1. 读源文件，按可归属段落/条目拆分。
2. **默认各放一份**（拆一次 + 拷贝到各目标项目）。原因：各项目独立自足、索引可独立维护、后续可演化出差异。
3. **不主动建议指针关联**（本包对成员只读，当前无通用跨项目文件引用；指针增加认知负担）。用户点名指针时，说明不推荐并仍给各放一份方案。
4. **拷贝时注意各项目索引可能不同**：为每个目标项目生成该项目专属的索引更新建议（已有编号接着编；尚未建 register 则先建议创建）。不得假设各项目编号连续或同构。
5. 内容无法归属任何已登记项目 → 请集经理指定归属；禁止把无法归属的内容写成集层事实源。
6. 输出模板：`assets/templates/shared-file-split-template.md`。必须含：归属建议、将复制到哪些项目、索引差异、须确认后才执行。
7. **须确认后才进入执行路径**。执行 = 内部生成 V-9（每条目标项目 + 目标文件 + 写入内容，标注「源自共享文件拆分」），由各项目 ChronoPM-Project 对话落地。
8. **V-11 只写 `portfolio/` 建议产物，永不写成员项目。** 用户要求「直接写入」→ 拒绝，提示切换到对应项目对话。

对外只给白话摘要（例如「三个项目各收一份，内容如下……」），禁止对用户说「建议更新清单」。

## 10. V-13 时间窗计划归集

触发：「归纳各项目 10 月 7 号前的计划」「汇总计划」「国庆各项目计划」及同义。与 V-2「各项目进度」不是同一句。

只读已登记成员。**忽略计划名称作对齐键**（名称只作「来源计划」列）。

筛计划文件（`status=正常`，满足任一）：

1. PLAN §1 开始~结束 与窗重叠
2. §2 任一门禁日落在窗内

筛输出 WP 行：该计划纳入的、`effect=正常`（缺省当正常）的 WP，其时间盒与窗重叠。§1 是计划目标窗，§3 排期是 WP 盒，两者不等价。

同一项目同一 WP 多份正常计划命中：一行，来源计划用 ` / `。人/期/状态只读 WP。两份投影不一致 → 标歧义，不平均。

废弃计划、废弃 WP 默认不入。窗口内无正常计划 → 写明「未命中」，不当已完成。

输出 6 列：项目 | WP | 当前状态 | 执行人 | 排期 | 来源计划。空岗写在执行人格。可选快照仅 `portfolio/reports/`，带 generated_from，不是事实源。禁止写 `projects/*/ai`。禁止集层 PLAN 当 SSOT。

## 11. 集层技能缺口

集层对话命中「技能做不到 / 记成升级需求」：拷贝 `assets/templates/skill-gap-demand-template.md` 结构（含 status / 迭代记录节），写入 `ai/portfolio/reports/{YYYYMMDDHHMMSS}/需求-{短标题}.md`（须 generated_from）。同指纹原位更新；禁止 `rev-NNN`。禁止写成员项目。禁止建 `skill-gap-skill/` 目录。权威规则在 ChronoPM-Project 能力目录；本包只落盘。

## 12. V-14 跨项目日报拆分（v3.20.0；v3.23.1 读取硬闸）

触发：集层粘贴/上传一份含多人多项目的日报或口述混报。不改变只读契约。

### 自动 vs 准确

- **自动**：按句/段切开，按规则打分归项目，高置信不把全项目名单甩给人猜。
- **准确**：第二名差距不够就问；不在花名册的项目不静默写入。
- **分发落地**：确认后写 `portfolio/reports/{批次}-日报分发.md` + 内部 V-9。**禁止**集层直接改成员 todos/inbox。用户说「直接写进各项目」→ 拒绝（与 V-11 第 8 条同文）。

### 拆分阶段读取硬闸（v3.23.1）

仅拆分/打分阶段。不改变 §1 待办清单读法、不改变 V-3。

**允许打开：** `portfolio/context/project-index.md`；各已登记项目**最新合法日**（date≤今天且该日 `_index` 存在的最大日）`todos/{date}/_index.md` **§1 花名册**；各项目进行中 `wps/_index.md` 行；段落点名到该人在该项目的包 → 才打开该 WP 头 / §3c / §8。禁止通读拆解正文。CQ-5：允许集必须实读。

**禁止打开**（命中 = 本轮拆分失败：停止，只用允许集重打分，禁止带着历史全文结论继续）：

- 早于 +1 锚点日的 `todos/{date}/*.md` 全文（含把多日 `_index` 当打分材料）
- 为打分通读旧分发稿、旧 `reports/ingest/` 批次
- 按日回溯扫未办结
- 用 §1「按人按日读核心表」凑 +1

**+1 锚点**（按此顺序，禁止再往前扫）：① 目标日报日期（用户所说昨天/原文日期；未说则 ASK 一天）该人核心执行表未办结行，或该日 `_index` 未办结计数；② 该日无该人文件 / 无该日 `_index` → 只再读该项目最新合法日 `_index` 未办结计数，或该人最新一份核心表（恰好 1 份）；③ 禁止第二份历史日全文。

本闸不改 Project inbox→C'、结转、WF-8、绑包。成员对话收下仍走 01。

### 打分（每人每段 × 已登记项目）

只读本节允许集。点名才打开该人 C(P) 所需 WP。

| 分 | 信号 |
|---|---|
| +5 | 段落含该项目名 / brief 模块名 |
| +4 | 该人在该项目花名册在岗（非已出组） |
| +3 | 该人在该项目 C(P) 非空（§3c 或 §8） |
| +2 | 实体/词库 confirmed 命中该项目功能点 |
| +1 | 该项目有该人未办结待办（**只按本节 +1 锚点读**，禁止扫历史日） |

高置信（文本混报）：最高分 **≥5**，比第二名 ≥2，且 **C(P) 非空**。这三项不得为求快删除或降低。仅花名册在岗(+4) 不得自动分发。段落含项目名精确命中(+5) 可过。否则 ASK。表内已绑出 `project` 槽走「弱结构投喂」，不走本打分。一段不能拆又打到两个项目 → 必问。人不在花名册 → 除非点名收编（V-9），否则不分进去。

集层粘贴日报 → 先拆表（人 / 建议项目 / 原句摘要 / 置信）→ 一次拍板 → 落分发稿（generated_from+updated+stale）+ 内部 V-9（目标=`todos/{date}/{owner}.md` 建议内容，标注来源集层分发）。

对外回执（拆分回合）只给人、建议项目、置信、落点文件。禁止叙述扫描了哪些历史文件。白话示例：「周贤虎这段归全链通，赵雪影那段归企业通；请分别到两个项目对话说收下今日分发。」禁止说「建议更新清单」。

## 13. 弱结构投喂（v3.20.0）

> **不是**某份 Excel 的专用解析。任何 PM 可能：有表头或没有、列顺序不同、一个文件一个项目或多个项目、xlsx/csv/md 表。禁止把业务列名写进本规则。

**槽位（仅此一组，无列号）**：`project` | `wp` | `feature` | `role:<名>` | `person` | `stage` | `status` | `note` | `date`

**落盘（乙案）**：

| 产物 | 谁写 | 路径 |
|---|---|---|
| 集层原件 + 全表抽出行 | Portfolio 当场 | `ai/portfolio/reports/ingest/{batch}/original.{ext}` 与同目录 `rows.md` |
| 列→槽位映射 | Portfolio 当场 | `ai/portfolio/context/ingest-maps.md` |
| 成员 original + 该项目 rows.md | **仅 Project**，「收下」之后 | `ai/projects/{名}/ai/requirements/sources/{编号}/` |
| 分发稿 | Portfolio | `ai/portfolio/reports/{批次}-投喂分发.md` |

禁止：写 `projects/*/ai`；写 `portfolio/batches/` 或 01 §2 未列路径；只留摘要不留原件；把集层 `rows.md` 当成员进度 SSOT。

**管道**：

1. 原件必存到 `reports/ingest/{batch}/`。成员副本等到该项目「收下」。
2. 空单元格：列标 `fill_down: true` 才向下填。
3. 指纹=列数+首行 token 集合+文件名种类词。命中旧映射则不问列。
4. 无命中才探测（表头同义词；无表头则列值撞 project-index / wps/_index / 花名册）。高重复不像 WP 名 → `group`，不当 WP 键。多列都能撞 WP → 对该列值**最长命中** index 名称的列为 `wp`/`feature`。
5. 行键=词库归一后的已绑槽位（至少 `project`+`wp` 或 `project`+`feature`）。行键命中只追加 note / 更新角色人，不新建 WP。
6. 已绑 `project` → 对 index 精确/包含 + 词库 `scope=project` 别名，不走 V-14 打分。未命中 → 回执未挂项目，一次选项后写项目别名。**领域词库里表示从属/一体的条目不得当项目拆分键**。
7. 落到 WP：`wp`/`feature` 对目标项目 index 最长匹配。文件名、分组列、计划窗口词不是 WP 键。人+角色 → SUGGEST 该包 §3c 待确认；写 3c 的主体是 Project（收下后），必须过 8c.1/8c.2。未收下前集层只 SUGGEST。默认不按行灌待办。
8. 搜：该源 `rows.md` 全表 + 命中 WP 的完整进度表。禁止摘要当正文。未收下可读集层批次 `rows.md` 并标注尚未写入成员项目。

与 V-14：无表一人一段走打分；表状且已绑 `project` 走本节；表状绑不出项目槽则行文本走 V-14，结果写回映射档。
